Fixing a layout bug

--- a/app/assets/stylesheets/_globals.css.sass
+++ b/app/assets/stylesheets/_globals.css.sass
@@ -101,7 +101,7 @@ body
   overflow-x: hidden
   -webkit-overflow-scrolling: touch
   position: relative
-  padding: $space-3
+  padding: $space-3 $space-2
 
   &.tab-bar
     max-height: $max-height - $tab-bar-height
@@ -111,7 +111,7 @@ body
     // - $nav-bar-height
     max-height: $max-height
     height: 100%
-    padding: $nav-bar-height $space-3 $space-3 $space-3
+    padding: $nav-bar-height $space-2 $space-3 $space-2
 
   &.nav-bar.tab-bar
     // - $nav-bar-height 
@@ -119,7 +119,7 @@ body
     max-height: $max-height - $tab-bar-height
     height: calc(100% - #{$tab-bar-height})
     //margin: $nav-bar-height 0 0 0
-    padding: $nav-bar-height $space-3 $space-3 $space-3
+    padding: $nav-bar-height $space-2 $space-3 $space-2
 
   &.nav-bar.add-people
     max-height: $max-height - $nav-bar-height - 12rem
