--- a/app/assets/stylesheets/_mixins.sass
+++ b/app/assets/stylesheets/_mixins.sass
@@ -1,7 +1,12 @@
 .full-width
-  width: calc(100% + #{$space-3 * 2})
-  margin-left: -$space-3
-  margin-right: -$space-3
+  width: calc(100% + #{$space-2 * 2})
+  margin-left: -$space-2
+  margin-right: -$space-2
+
+.almost-full-width
+  width: calc(100% + #{$space-1 * 2})
+  margin-left: -$space-1
+  margin-right: -$space-1
 
 .input-row
   border: 1px solid $grey-light
