--- a/app/assets/stylesheets/circle.css.sass
+++ b/app/assets/stylesheets/circle.css.sass
@@ -42,7 +42,8 @@ $post-padding: $space-2
       @extend .tiny
 
 .feed-post
-  @extend .full-width
+  @extend .almost-full-width
+  border-radius: 2px
   background: white
   box-shadow: 0px 1px 0px rgba(0,0,0,0.15)
   margin-bottom: $space-2
